worked on main menu, fixed meku flicker

--- a/main.css
+++ b/main.css
@@ -1,8 +1,43 @@
-html {
+html,
+body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: rgb(101, 103, 140);
+    color: #7e80a2;
 }
 
 h1 {
+    text-align: right;
     font-weight: normal;
+    margin: 0;
+}
+
+li {
+    font-size: 20px;
+    list-style-type: none;
+}
+
+#melvin-title {
+    font-size: 63.3px;
+}
+
+#content-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 25vh;
+    max-width: 700px;
+}
+
+#main-menu {
+    border-left: 2px solid #65678c;
+    padding-left: 20px;
+    margin: 0;
+    margin-left: 20px;
+    align-self: stretch;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
